--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,10 @@ ikiwiki (1.31) UNRELEASED; urgency=low
     just in case. Should not be exploitable anyway, since it only tries to run
     polygen after finding the specified grammar file.
   * Add missing dependency on the URI perl module.
+  * Add basic spam fighting tool for admins: An admin's prefs page now allows
+    editing a list of banned users who are not allowed to log in.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 13:10:49 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 20:00:33 -0400
 
 ikiwiki (1.30) unstable; urgency=low
 
