--- a/doc/todo/spam_fighting.mdwn
+++ b/doc/todo/spam_fighting.mdwn
@@ -1,1 +1,1 @@
-Admins need the ability to lock/remove users, and to block IP ranges.
+Admins need the ability to block IP ranges. They can already ban users.
