--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ ikiwiki (1.31) UNRELEASED; urgency=low
     polygen after finding the specified grammar file.
   * Add missing dependency on the URI perl module.
   * Add basic spam fighting tool for admins: An admin's prefs page now allows
-    editing a list of banned users who are not allowed to log in.
+    editing a list of banned users.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 20:00:33 -0400
 
