--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.31) UNRELEASED; urgency=low
+ikiwiki (1.31) unstable; urgency=low
 
   * Patch from Pawel Tecza to cp -a the templates in the Makefile.
   * Change the rss feed title from the wikiname to the page title, with
@@ -15,7 +15,7 @@ ikiwiki (1.31) UNRELEASED; urgency=low
   * Add basic spam fighting tool for admins: An admin's prefs page now allows
     editing a list of banned users.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 20:00:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 23:16:33 -0400
 
 ikiwiki (1.30) unstable; urgency=low
 
